--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ allprojects {
         jcenter()
         maven { url 'https://www.jitpack.io' }
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
+        maven {
+            url 'https://esri.bintray.com/arcgis'
+        }
     }
 }
 
